Alterando autoload para psr-4 e modificando document_root para pasta public/

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
 		}
 	],
     "autoload": {
-        "psr-0": { "AppCode": "src/AppCode" }
+        "psr-4": {
+          "AppCode\\": "src/AppCode"
+        }
     },
     "require": {
         "php": ">=5.2.8"
